core/src/ast/snapshots/diplomat_core__ast__modules__tests__import_in_non_diplomat_not_analyzed.snap
---
source: core/src/ast/modules.rs
expression: "File::from(&syn::parse_quote!\n{\n    #[diplomat::bridge] mod ffi { struct Foo {} } mod other\n    { use something::*; }\n})"
---
modules:
  ffi:
    name:
      - ffi
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    imports: []
    declared_types:
      ? - Foo
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      : Struct:
          name:
            - Foo
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          lifetimes: {}
          fields: []
          methods: []
          output_only: false
          attrs: {}
    declared_traits: {}
    declared_functions: {}
    sub_modules: []
    attrs: {}
  other:
    name:
      - other
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    imports: []
    declared_types: {}
    declared_traits: {}
    declared_functions: {}
    sub_modules: []
    attrs: {}
