core/src/ast/snapshots/diplomat_core__ast__modules__tests__method_visibility.snap
---
source: core/src/ast/modules.rs
expression: "Module::from_syn(&syn::parse_quote!\n{\n    #[diplomat::bridge] mod ffi\n    {\n        struct Foo {} impl Foo\n        {\n            pub fn pub_fn() { unimplemented!() } pub(crate) fn pub_crate_fn()\n            { unimplemented!() } pub(super) fn pub_super_fn()\n            { unimplemented!() } fn priv_fn() { unimplemented!() }\n        }\n    }\n}, true, None, &SpanLocation::None,)"
---
name:
  - ffi
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
imports: []
declared_types:
  ? - Foo
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : Struct:
      name:
        - Foo
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      docs:
        - - cfg: Star
            lines: ""
        - []
      lifetimes: {}
      fields: []
      methods:
        - name:
            - pub_fn
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          abi_name:
            - Foo_pub_fn
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          self_param: ~
          self_type:
            path:
              elements:
                - - Foo
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
          params: []
          return_type: ~
          lifetime_env: {}
          attrs: {}
      output_only: false
      attrs: {}
declared_traits: {}
declared_functions: {}
sub_modules: []
attrs: {}
